<resources>
    <string name="create_new_character">Create New Character</string>
    <string name="load_character">Load Character</string>
    <string name="title_activity_stats">Stats Activity</string>
    <string name="app_name">CharacterSheet</string>
    <!-- Class names -->
    <string name="alchemist">Alchemist</string>
    <string name="barbarian">Barbarian</string>
    <string name="battle_mage">Battle Mage</string>
    <string name="cleric">Cleric</string>
    <string name="conjurer">Conjurer</string>
    <string name="controller">Controller</string>
    <string name="druid">Druid</string>
    <string name="dualist">Dualist</string>
    <string name="gambler">Gambler</string>
    <string name="illusionist">Illusionist</string>
    <string name="necromancer">Necro</string>
    <string name="ninja">Ninja</string>
    <string name="paladin">Paladin</string>
    <string name="ranger">Ranger</string>
    <string name="seer">Seer</string>
    <string name="trap_specialist">Trap Specialist</string>
    <!-- Stat labels -->
    <string name="max_hp">Max HP</string>
    <string name="current_hp">Current HP</string>
    <string name="might">Might</string>
    <string name="intuition">Intuition</string>
    <string name="agility">Agility</string>
    <string name="precision">Precision</string>
    <string name="tactics">Tactics</string>
    <string name="introspection">Introspection</string>
    <string name="physical_resistance">Physical Resistance</string>
    <string name="magical_resistance">Magical Resistance</string>
    <string name="character_level">Level</string>
    <string name="essence_points">Essence Points</string>
    <string name="exp">Exp</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="enemy_name">Name</string>
    <string name="hp">Health</string>
    <string name="phys_resistance">Physical Res</string>
    <string name="mag_resistance">Magical Res</string>
    <string name="enable_free_ep_buttons">Enable Free EP Buttons</string>
    <string name="zone">Zone</string>
    <string name="craft_armor">Craft Armor</string>
    <string name="craft_weapon">Craft Weapon</string>
    <string name="enemy_defeated">Enemy Defeated</string>
    <string name="enemy_hp">Enemy HP</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="you_ve_reached_a_new_level">You\'ve reached a new level!</string>
    <string name="roll_a_d6_and_select_your_result">Roll a D6 and select your result</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="activity_title_format">%1$s / %2$s</string>
    <string name="class_name_format">(%1$s)</string>
    <string name="confirm_class">Confirm Class</string>
    <string name="total">Total</string>


    <string-array name="modifiers">
        <item>None</item>
        <item>Acidic</item>
        <item>Agile</item>
        <item>Aggressive</item>
        <item>Arctic</item>
        <item>Bladed</item>
        <item>Cunning</item>
        <item>Cowering</item>
        <item>Earthen</item>
        <item>Electrified</item>
        <item>Fiery</item>
        <item>Flaying</item>
        <item>Ghostly</item>
        <item>Greedy</item>
        <item>Hearty</item>
        <item>Impervious</item>
        <item>Intelligent</item>
        <item>Lively</item>
        <item>Noxious</item>
        <item>Percipient</item>
        <item>Perceptive</item>
        <item>Piercing</item>
        <item>Plump</item>
        <item>Pustulating</item>
        <item>Reinforced</item>
        <item>Robust</item>
        <item>Shielded</item>
        <item>Shelled</item>
        <item>Translucent</item>
        <item>Tranquil</item>
        <item>Vampiric</item>
        <item>Venomous</item>
        <item>Vigorous</item>
        <item>Wind Walking</item>


    </string-array>

    <string-array name="enemies">
        <item>None</item>
        <item>Arachnid</item>
        <item>Bandit</item>
        <item>Corrupted Imp</item>
        <item>Flock of Ravens</item>
        <item>Man-Eating Plant</item>
        <item>Mud Golem</item>
        <item>Mystic Bedlamite</item>
        <item>Scorpion</item>
        <item>Undine</item>
        <item>Vampire Bat</item>
        <item>Wolf</item>
        <item>Worm</item>

    </string-array>



</resources>