<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="2sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/enable_stats_buttons_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zone_label"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_stats_buttons_switch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:checked="false"
            android:text="@string/enable_free_ep_buttons"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeStepGranularity="1sp"
            app:layout_constraintTop_toBottomOf="@+id/activity_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zone_label"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/zone_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/zone"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/radio_group"
            app:layout_constraintStart_toEndOf="@+id/activity_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_margin="0sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="0sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/zone_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/enable_stats_buttons_switch"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/zone1Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_1"
                android:padding="0dp" />

            <RadioButton
                android:id="@+id/zone2Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:padding="0dp" />

            <RadioButton
                android:id="@+id/zone3Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:padding="0dp" />

            <RadioButton
                android:id="@+id/zone4Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:padding="0dp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
