<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Spinner
                android:id="@+id/modifierSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/enemySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/enemyStatsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6sp">
        </TableLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#444444"
            android:layout_marginTop="8dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <Button
                android:id="@+id/decrementHPButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintStart_toStartOf="@+id/guideline_start_hp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toEndOf="@+id/decrementHPButton"
                app:layout_constraintEnd_toStartOf="@+id/incrementHPButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/enemyHPLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enemy_hp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/hpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:padding="8dp"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/incrementHPButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end_hp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/enemyDefeatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enemy_defeated"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/craftWeaponButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/craft_weapon"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/weapon_stats_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/craftArmorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/craft_armor"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/armor_stats_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="8dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
